AddGames form can be passed to backend

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,7 @@
   /* COLORS: BLUE */
   --blue: #3db4f2;
   --dark-blue: #152232;
+  --greyish-blue: #5d7078;
   --background-dark: #0b1622;
   --footer-dark: #11161d;
 
