--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 /* GLOBAL CSS */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;700&display=swap');
 
 :root {
   /* TEXT COLORS */
@@ -20,7 +20,7 @@
 }
 
 body {
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   color: var(--text-primary);
   background: var(--background-dark);
   box-sizing: border-box;
@@ -33,6 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
